--- a/terms.html
+++ b/terms.html
@@ -5,5 +5,6 @@
 <h1>Terms of Service</h1>
 <p>This is a placeholder Terms of Service page for the TikTok app integration.</p>
 <p>By using this app, you agree to the TikTok API terms and this placeholder.</p>
+  tiktok-developers-site-verification=HXSrxYqicGQSuxo2dWTbTRk5fFSd4rTo
 </body>
 </html>
